k8s/local/deployment-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coursevt
  namespace: coursevt
spec:
  template:
    spec:
      containers:
        - name: coursevt
          image: coursevt:local
          imagePullPolicy: Never
